# SuperNOVAS

./: .cproject  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  USAGE-C99.md  USAGE-CPP.md  build.mk  config.mk
.github/workflows/: analyze.yml  build-cmake.yml  build.yml  cmake-windows.yml  dox.yml  example.yml  indexnow.yml  install.yml  test.yml
benchmark/: Makefile
cmake/: supernovasConfig.cmake.in
cpp/: Apparent.cpp  Frame.cpp  Geometric.cpp  Orbital.cpp  Site.cpp  Source.cpp
doc/: CMakeLists.txt  Makefile  USAGE-C99.md  USAGE-CPP.md
doc/c99/: CMakeLists.txt  Doxyfile  Makefile  SuperNOVAS_vs_astropy.md
doc/cpp/: CMakeLists.txt  Doxyfile  Makefile  SuperNOVAS++_vs_C99.md  SuperNOVAS++_vs_astropy.md
doc/src/: docedit.c
examples/: .gitignore  CMakeLists.txt  Makefile
examples/c99/: CMakeLists.txt  Makefile  example-calceph.c  example-cspice.c  example-high-z.c  example-moon  example-moon.c  example-orbital.c  example-rise-set.c  example-star.c  example-time.c
examples/cpp/: CMakeLists.txt  Makefile  example-calceph.cpp  example-cspice.cpp  example-high-z.cpp  example-moon  example-moon.cpp  example-orbital.cpp  example-rise-set.cpp  example-star.cpp  example-time.cpp
include/: novas-calceph.h  novas-cspice.h  novas.h  supernovas.h
legacy/: solarsystem.h
resources/: SuperNOVAS-systems-2.dia  analytics.html
src/: CMakeLists.txt  Makefile  observer.c
src/c99/: CMakeLists.txt  Makefile  calendar.c  cio.c  earth.c  ephemeris.c  equator.c  frames.c  grav.c  moon.c  naif.c  nutation.c  observer.c  orbital.c  parse.c  place.c  planets.c  refract.c  solsys-cspice.c  solsys-ephem.c  solsys3.c  spectral.c  system.c  target.c  timescale.c  util.c
src/cpp/: Angle.cpp  Apparent.cpp  AstrometricPosition.cpp  CMakeLists.txt  Calendar.cpp  CatalogEntry.cpp  Coordinate.cpp  EOP.cpp  Ecliptic.cpp  Equatorial.cpp  Equinox.cpp  Frame.cpp  Galactic.cpp  Geometric.cpp  Horizontal.cpp  Interferometric.cpp  Interval.cpp  Makefile  Observer.cpp  Orbital.cpp  Position.cpp  Pressure.cpp  ReferencedPosition.cpp  Scalar.cpp  ScalarEvolution.cpp  ScalarVelocity.cpp  Site.cpp  Source.cpp  Spherical.cpp  Temperature.cpp  Time.cpp  TimeAngle.cpp  Track.cpp  Vector.cpp  Velocity.cpp  Weather.cpp
test/: .gitignore  CMakeLists.txt  Makefile
test/c99/: CMakeLists.txt  Makefile  test-calceph.c  test-cspice.c  test-errors.c  test-super.c
test/cpp/: AngleTest.cpp  ApparentTest.cpp  AstrometricPositionTest.cpp  CMakeLists.txt  CalendarTest.cpp  CatalogEntryTest.cpp  CoordinateTest.cpp  EOPTest.cpp  EclipticTest.cpp  EquatorialTest.cpp  EquinoxTest.cpp  FrameTest.cpp  GalacticTest.cpp  GeometricTest.cpp  HorizontalTest.cpp  InterferometricTest.cpp  IntervalTest.cpp  Makefile  ObserverTest.cpp  OrbitalTest.cpp  PlanetTest.cpp  PositionTest.cpp  PressureTest.cpp  ReferencedPositionTest.cpp  ScalarEvolutionTest.cpp  ScalarTest.cpp  ScalarVelocityTest.cpp  SiteTest.cpp  SourceTest.cpp  SphericalTest.cpp  TemperatureTest.cpp  TimeAngleTest.cpp  TimeTest.cpp  TrackTest.cpp  VectorTest.cpp  VelocityTest.cpp  WeatherTest.cpp
test/src/: test-errors.c  test-super.c
